UDT-24 refector: Query-Service 분리